# desafio-movilidad-bikeshare

./: .dockerignore  .gitignore  Dockerfile  MEMORY.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/processed/: bikeshare_features.parquet
docs/: arquitectura.md  exportar_figuras.py  insertar_figuras.py  presentacion.md  presentacion.pptx  presentacion_bikeshare.pptx
models/: feature_importances.csv  metrics.json  model.pkl
notebooks/: 01_eda.ipynb  01_eda_final.ipynb  02_clustering.ipynb
src/bikeshare/: __init__.py  config.py  features.py
src/bikeshare/api/: __init__.py  main.py
src/bikeshare/dashboard/: __init__.py  app.py
src/bikeshare/etl/: __init__.py  extract.py  load.py  pipeline.py  transform.py
src/bikeshare/models/: __init__.py  clustering.py  evaluate.py  predict.py  train.py
tests/: test_api.py  test_clustering.py  test_features.py  test_models.py  test_transform.py
