[project]
name = "desafio-movilidad-bikeshare"
version = "0.1.0"
description = "Predicción de demanda horaria de bicicletas (bikeshare) — Desafío de Ciencia de Datos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "plotly>=5.24",
    "dash>=2.18",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "requests>=2.32",
    "ucimlrepo>=0.0.7",
    "holidays>=0.57",
    "joblib>=1.4",
    "pyarrow>=17.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "httpx>=0.27",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bikeshare"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
